--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bulentkyc.github.io/MERN-Cotact-List-FE",
+  "homepage": "https://bulentkyc.github.io/MERN-CL",
   "name": "fe",
   "version": "0.1.0",
   "private": true,
